infra/k8s/auth-service-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
  ports:
    - protocol: TCP
      port: 80          
      targetPort: 3001   
  type: ClusterIP
